Version 1.5
- Add `/wesv visibility <always|never|holding-tool>`
- Fix the outputs of `/wesv` to make them more friendly
- Update version to 1.5
- Catch a small NPE from WE